<resources>
    <string name="app_name">Coffee</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="time_prepar">15 Minutos</string>
    <string name="desc_coffee">
        Uma simples e perfeitamente extraída dose de expresso misturado com leite fresco
        e chocolate fazem esta bebida deliciosa.
    </string>
    <string name="content_express">1 dose expresso</string>
    <string name="content_milk">100ml leite</string>
    <string name="content_chocolate">1 colher de chocolate em pó</string>
    <string name="ingredients">Ingredientes</string>
</resources>